author:
    Geraud Boyer
build-type:
    Simple
cabal-version:
    >= 1.10
category:
    System
copyright:
    2015 Geraud Boyer <geraud@gmail.com>
description:
    TODO: Write a package description.
extra-source-files:
    CHANGELOG.md
    CONTRIBUTING.md
    README.md
license-file:
    LICENSE.md
license:
    MIT
maintainer:
    geraud@cardspring.com
name:
    access
synopsis:
    TODO: Write a package synopsis.
tested-with:
    GHC == 7.8
  , GHC == 7.6
  , GHC == 7.10
version:
    0.0.0

library
    build-depends:
        base == 4.8.*
      , amazonka == 0.3.*
      , amazonka-core == 0.3.*
      , amazonka-ec2 == 0.3.*
      , containers == 0.5.6.*
      , bytestring == 0.10.*
      , configurator == 0.3.*
      , directory == 1.2.*
      , filepath == 1.4.*
      , lens == 4.8.*
      , lifted-async == 0.6.*
      , text == 1.2.*
    default-language:
        Haskell2010
    exposed-modules:
        Access
        Access.AWS
        Access.Config
        Access.Display
    other-modules:
        Access.Types
    ghc-options:
        -threaded
        -Wall
    ghc-prof-options:
        -auto-all
        -prof
    hs-source-dirs:
        library

executable access
    build-depends:
        base
      , access
    default-language:
        Haskell2010
    ghc-prof-options:
        -auto-all
        -prof
        -threaded
    hs-source-dirs:
        executable
    main-is:
        Main.hs

-- test-suite tests
--     build-depends:
--         base
--       , access
--       , hspec == 2.*
--       , HUnit
--       , QuickCheck
--     default-language:
--         Haskell2010
--     ghc-options:
--         -fhpc
--         -Wall
--         -Werror
--     hs-source-dirs:
--         library
--         test-suite
--     main-is:
--         Spec.hs
--     other-modules:
--         Access
--         -- HASKELETON: New.Module
--         AccessSpec
--         -- HASKELETON: New.ModuleSpec
--     type:
--         exitcode-stdio-1.0

-- test-suite examples
--     build-depends:
--         base
--       , Glob
--       , doctest
--     default-language:
--         Haskell2010
--     hs-source-dirs:
--         test-suite
--     main-is:
--         DocTest.hs
--     type:
--         exitcode-stdio-1.0

test-suite documentation
    build-depends:
        base
      , process
      , regex-compat
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        Haddock.hs
    type:
        exitcode-stdio-1.0

test-suite style
    build-depends:
        base
      , hlint == 1.*
    default-language:
        Haskell2010
    hs-source-dirs:
        test-suite
    main-is:
        HLint.hs
    type:
        exitcode-stdio-1.0
